# Sourcetrail

./: CMakeLists.txt  appveyor.yml
docs/documentation/: index.html
script/: update_java_indexer.sh
src/lib_gui/qt/window/: QtKeyboardShortcuts.cpp
